tests/single_instruction_translation_validation/mcsema/register-variants/packsswb_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:205:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %20)
            ^
0.01user 0.01system 0:00.02elapsed 103%CPU (0avgtext+0avgdata 27624maxresident)k
0inputs+16outputs (0major+3269minor)pagefaults 0swaps
